Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-86172

Qt 6: Implementations of QDate::fromString(QStringView) are missing

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • None
    • 6.0.0
    • Core: Date/Time
    • None
    • All
    • 0
    • 0ad96eac3895e999aa71a68beaff25f5f2d612e6 (qt/qtbase/dev)
    • Qt6_Foundation_Sprint 19

    Description

      At qtbase/f22ad1afec27d72c21b20a5fef4f67975cdaa46d

        static QDate fromString(QStringView s, Qt::DateFormat f = Qt::TextDate);
        static QDate fromString(QStringView s, QStringView format, QCalendar cal = QCalendar());
      

      are not implemented, causing link errors in Qt for Python.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            Eddy Edward Welbourne
            kleint Friedemann Kleint
            Maurice Kalinowski Maurice Kalinowski
            Alex Blasche Alex Blasche
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes